-------------------------- soilDB 1.4-2 (2014-12-23) ----------------------------
* new internally-used function .formatLandformString() for flattening NASIS/PedonPC "landform" records
* new internally-used function .formatParentMaterialString() for flattening NASIS/PedonPC "parent material" records
* fetchNASIS() incorporates the results of these two new functions
* new function SSURGO_spatial_query() queries SSURGO data from SoilWeb (see manual page for details)

-------------------------- soilDB 1.4 (2014-11-13) ----------------------------
* moving most of the hard-to-install packages into `suggests`, and checking for package availability at function runtime. this will make soilDB more portable, as not every user will want or need all functionality.

-------------------------- soilDB 1.3-6 (2014-10-27) ----------------------------
* fetchNASIS() gains argument rmHzErrors to optionally retain pedons with horizonation errors. use with caution.

-------------------------- soilDB 1.3-5 (2014-09-25) ----------------------------
* loafercreek sample dataset re-created from new data
* seriesExtent() now utilizes pre-cached GeoJSON files from [http://casoilresource.lawr.ucdavis.edu/see/]

-------------------------- soilDB 1.3 (2014-02-26) ----------------------------
* Changes made to fetch functions to accommodate changes implemented in the NASIS 6.3 data structure
* get_site_data_from_NASIS_db(): in cases where multiple records in site-bedrock exist, retain only the most shallow
* fetchRaCA() has a new argument for querying data by rcasiteid

-------------------------- soilDB 1.2-9 (2014-01-06) ----------------------------
* SOC concentration and stock values are temporarily disabled in fetchRaCA() 
  - waiting for new estimates from the Soil Survey Center...


-------------------------- soilDB 1.2-6 (2013-12-05) ----------------------------
* added new function contributed by J.M. Skovlin: get_veg_from_NPS_PLOTS_db()