@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.4-2
-Date: 2014-12-23
-Packaged: 2014-12-23; dylan
+Version: 1.4-3
+Date: 2015-01-12
+Packaged: 2015-01-12; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
